--- a/Proj_URL_Shortner/package.json
+++ b/Proj_URL_Shortner/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.21.1",
     "mongoose": "^8.8.3",
+    "nanoid": "^3.3.8",
     "nodemon": "^3.1.7"
   }
 }
